O motor volta a ser um so: as mudancas feitas no MakeMeDev vem para ca
Quatro arquivos evoluiram na copia do MakeMeDev e nunca voltaram. Agora
os dois motores sao identicos byte a byte.

JGTopDownLayer: colunas e linhas do mapa em cache por quadro, altura e tile
sob a tela calculados sem alocar um vetor por consulta, e uma guarda em
orderActors que poe um sprite ja descartado, de posicao nula, no fim da
fila em vez de derrubar a thread do jogo.

JGWindowManager: o quadro pronto e publicado por presentFrame sem copia,
getBackBufferImage devolve o ultimo publicado para quem dirige o laco a
mao, e allowNativeFullScreen pede a tela cheia nativa do macOS antes de a
janela aparecer, porque depois setUndecorated recusa.

JGEngine e JGLevel: os ajustes que acompanham os dois acima.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01NGdXf7iUGjre7pj5CHwTcW